Immediately shutdown the scheduler in PeriodicallyExportingStagingArea and export StackTraces when closed.